# shedder

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/shedder/: __init__.py  main.py
