[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shedder"
version = "0.0.1"
description = "A Python framework for clean, event-driven APIs grounded in Domain-Driven Design."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["ddd", "domain-driven-design", "event-driven", "framework", "api"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/serpentine-parser/shedder"
